# nav2_my_plugins

action/spin_reactive_action/: CMakeLists.txt  package.xml  spin_reactive_action.xml
action/spin_reactive_action/include/spin_reactive_action/: spin_reactive_action.hpp
action/spin_reactive_action/src/: spin_reactive_action.cpp
action/voice_confirmation_action/: CMakeLists.txt  package.xml  voice_confirmation_action.xml
action/voice_confirmation_action/include/voice_confirmation_action/: voice_confirmation_action.hpp
action/voice_confirmation_action/src/: voice_confirmation_action.cpp
behavior_trees/: navigate_to_pose_w_replanning_and_recovery_and_spin.xml  navigate_to_pose_w_replanning_and_recovery_and_target_search copy.xml  pose_for_opening_door_test.xml  spin_until_seeing_fridge_approach.xml  spin_until_seeing_target.xml  tv_demo.xml
condition/is_goal_updated/: CMakeLists.txt  README.md  is_goal_updated.xml  package.xml
condition/is_goal_updated/include/is_goal_updated/: is_goal_updated.hpp
condition/is_goal_updated/src/: is_goal_updated.cpp
condition/is_target_visible/: CMakeLists.txt  is_target_visible.xml  package.xml
condition/is_target_visible/include/is_target_visible/: is_target_visible.hpp
condition/is_target_visible/src/: is_target_visible.cpp
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/action/: VoiceConfirmation.action
